# NAP-Reference-Architecture

./: 404.html  CONTRIBUTING.md  README.md  README.original.md  index.html  maintenance.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  tagged-release.yml  update-latest.yml
about/: index.html
docs/: about.md  feedback.md  frame.md  index.md  nap_architecture.md  ref_archs.md
docs/latest/: 03 NAP Organisational View.docx  04 NAP Physical View.docx  07 KPI Framework.docx
docs/uml/: frame_metamodel.md  frame_repository.md  nap_architecture.md  nb_architecture.md
drafts/: readme.md
drafts/docs/: 00 NAP Motivation Layer.docx  01 NAP User Needs.docx  02 NAP Functional View.docx  04 NAP Physical View.docx  05 NAP Communication View.docx  08 Specification and Requirements.docx
drafts/guides/: guide to demonstrator feedback to the NRA.docx  guide to mapping NLKF to NRA.docx  guide to use of interfaces.docx  guide to use of specifications.docx
drafts/next/: changelog.md
feedback/: index.html
frame/: index.html
model/: readme.md
nap_architecture/: index.html
ref_archs/: index.html
releases/: readme.md
search/: search_index.json
toolbox/: readme.md
toolbox/1.1.0/: FRAME_Diagram.xml  FRAME_Profile.xml  FRAME_Toolbox.xml  FRAME_V1_MTS.mts  FRAME_V1_MTS.xml
toolbox/how-to/: FRAME_Toolbox Import.docx
uml/frame_metamodel/: index.html
uml/frame_repository/: index.html
uml/nap_architecture/: index.html
uml/nb_architecture/: index.html
uml_models/: changelog.docx
(+13312 files in other folders)
