[project]
name = "mkdocs4frame"
version = "0.1.0"
description = "Proof of concept for publishing HTML Browsable UML models with contextual information."
authors = [
    {name = "Jan Vlcinsky", email = "jan.vlcinsky@tamtamresearch.com"},
]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.19",
    "mkdocs-macros-plugin>=1.0.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
